add tables, models for freezerStorages, freezerBlocks. Add seeders.
